--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IOS Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn-icons-png.flaticon.com/128/564/564429.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="calculator">
@@ -30,10 +35,11 @@
           <div class="content number">3</div>
           <div class="content operation plus equal">+</div>
           <div class="content zero number">0</div>
-          <div class="content point">.</div>
+          <div class="content point number">.</div>
           <div class="content equal">=</div>
         </div>
       </div>
     </div>
+    <script src="calculator.js"></script>
   </body>
 </html>
