--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
           <div class="content white delete">AC</div>
           <div class="content white plusMinus">±</div>
           <div class="content white percent">%</div>
-          <div class="content operation divide equal">/</div>
+          <div class="content operation divide">/</div>
           <div class="content number">7</div>
           <div class="content number">8</div>
           <div class="content number">9</div>
-          <div class="content operation multiply equal">*</div>
+          <div class="content operation multiply">*</div>
           <div class="content number">4</div>
           <div class="content number">5</div>
           <div class="content number">6</div>
-          <div class="content operation minus equal">-</div>
+          <div class="content operation minus">-</div>
           <div class="content number">1</div>
           <div class="content number">2</div>
           <div class="content number">3</div>
-          <div class="content operation plus equal">+</div>
+          <div class="content operation plus">+</div>
           <div class="content zero number">0</div>
           <div class="content point number">.</div>
           <div class="content equal">=</div>
